# Stable-Decomposition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  minimize.cpp  pruning.cpp  pruning.hpp  pruning_interface.hpp  to-do.txt  utils.cpp  visualise_reso.py
.cache/clangd/index/: bitset_algebra.hpp.1D6569B90849236C.idx  column_types.hpp.10A7712C01918A7C.idx  dense_matrix.hpp.E43416823EF10B42.idx  graded_linalg.hpp.B5A17D4FCF87C8FB.idx  graded_matrix.hpp.D5F142F3862DC64D.idx  grid_scheduler.hpp.7F2823B80F4FE074.idx  homomorphisms.hpp.2BB020F5372FDD90.idx  matrix_base.hpp.247960DC40320821.idx  orders_and_graphs.hpp.ABB7843D7B347270.idx  pruning.cpp.4C14EAB9B556FDFD.idx  pruning.hpp.317C6CD1E0EDF839.idx  r2graded_matrix.hpp.42C8BD435AC25C4D.idx  r3graded_matrix.hpp.C169B0997A1F9537.idx  sparse_matrix.hpp.FF653929D3B8C50F.idx
include/: pruning.hpp  utils.hpp
test_presentations/: full_rips_size_1_instance_5_min_pres.scc  function_delaunay_7_2.scc  k_fold_175_10_1_min_pres.firep  k_fold_46_10_2_min_pres.firep  minimal_presentation_from_function_rips.scc  multi_cover_050_10_1_min_pres.scc  multi_cover_077_10_1_min_pres.scc  multi_cover_125_10_1_min_pres.scc  no_columns_test.scc  noisy_circle_firep_8_0_min_pres.firep  off_dragon_min_pres.scc  points_wo_density_10_dim2_k_fold_10_min_pres.firep  points_wo_density_10_dim3_k_fold_10_min_pres.firep  points_wo_density_20_dim2_k_fold_10_min_pres.firep  small_pres_with_nonzero_k_min_pres.firep  test6.scc  test8.scc  test9.scc  test_3d.scc  test_pres_with_nonzero_k_min_pres.firep  torus3.sccsum  torus3_largestcomp_pru0.0100.scc  torus3_largestcomp_pru0.0100.sccsum  torus3_largestcomp_pru0.0100_resolution.sccsum  torus3_largestcomp_pru_0.005_min.scc  torus3_largestcomp_pru_0.005_min_resolution.scc  torus3_largestcomp_pru_0.005_min_resolution.sccsum  torus3_largestcomp_pru_0.01_min.scc  torus3_largestcomp_pru_0.01_min_resolution.scc  toy_example_1.scc  toy_example_2.scc  toy_example_3.scc  toy_example_4.scc  toy_example_5.scc  toy_example_6.scc
test_presentations/quiver_representations/: k_fold_46_10_1_min_pres.g  k_fold_46_10_2_min_pres.g  noisy_circle_firep_8_0_min_pres.g  small_pres_with_nonzero_k_min_pres.g  test_pres_with_nonzero_k_min_pres.g  test_pres_with_nonzero_k_min_pres_with.g
test_presentations_pruning/: test1.scc
tests/: pruning_bug_ex.scc  pruning_bug_ex_min.scc  r2graded_tests.cpp  test1_pru0.0100.scc  test2.scc  test3.scc  test4.scc  test5.scc  test7.scc  test8.scc  test8_pru.scc  test8_pru_resolution.scc  test8_resolution.scc  tests.cpp  torus3.scc  torus3_largestcomp.scc  torus3_largestcomp_pru.scc  torus3_largestcomp_pru0.0080.scc  torus3_largestcomp_pru0.0100.scc  torus3_largestcomp_pru0.0100_resolution.scc  torus3_largestcomp_pru_0.005.scc  torus3_largestcomp_pru_0.005_min.sccsum  torus3_largestcomp_pru_0.005_min_resolution.scc  torus3_largestcomp_pru_0.005_resolution.scc  torus3_largestcomp_pru_0.01_min.sccsum  torus3_largestcomp_pru_0.01_min_resolution.scc  torus3_largestcomp_pru_0.01_min_resolution.sccsum  torus3_largestcomp_pru_0.01_resolution.scc  torus3_largestcomp_pru_resolution.scc  torus3_largestcomp_resolution.scc  torus3_resolution.scc  two_circles.scc
tests/tests_with_solutions/: solutions  test2_pru1.scc  test3_pru1.scc  test4.scc  test4_pru1.scc
